# imgstar

./: .gitignore  README.md  README.zh-CN.md  package-lock.json  package.json
.github/agents/: rust-audit.agent.md  rustcoder.agent.md
apps/desktop/: .eslintrc.cjs  eslint.config.js  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/docs/: fe-gate-closeout.md  frontend-api-facade.md
apps/desktop/src/: main.ts
apps/desktop/tests/: setup.ts
docs/: windows-msix.md
docs/architecture/: architecture.md
docs/architecture/talk/: ui.md  (+3 more)
scripts/: build-tauri.ps1  package-msix.ps1  setup-windows-env.ps1
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  contracts.rs  lib.rs
src-tauri/src/commands/: logs.rs  mod.rs  plugins.rs  preview.rs  settings.rs  upload.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/logging/: center.rs
src-tauri/src/domain/plugin/: service.rs
src-tauri/src/domain/preview/: service.rs
src-tauri/src/domain/settings/: mod.rs  normalizer.rs  ping_adapter.rs  service.rs  validator.rs
src-tauri/src/domain/upload/: mod.rs  object_upload.rs  orchestrator.rs  recycle.rs  support.rs  waf_sync.rs
src-tauri/src/runtime/: event_bus.rs  mod.rs  plugin_runtime.rs
src-tauri/src/runtime/adapter_runtime/: cloudflare.rs  mod.rs  s3.rs  waf.rs
src-tauri/src/storage/: key_allocator.rs  log_store.rs  mod.rs  settings_store.rs  upload_queue_store.rs
src-tauri/tests/: backend_integration.rs  waf_real_config_smoke.rs
(+44 files in other folders)
